--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -33,7 +33,7 @@ spring.servlet.multipart.max-request-size=2MB
 # JWT
 # ===============================
 jwt.secret=${JWT_SECRET}
-jwt.expiration-ms=86400000
+jwt.expiration-ms=${JWT_EXPIRATION_MS}
 
 # ===============================
 # Logging
